Bug 98598 - VIEWING: Repeated background image and web layout makes scrolling multiply elements on screen temporarily
Summary: VIEWING: Repeated background image and web layout makes scrolling multiply el...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.5.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: Writer-Web-Layout
  Show dependency treegraph
 
Reported: 2016-03-11 10:12 UTC by Ben
Modified: 2026-05-22 00:07 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The faulty odt (124.41 KB, application/vnd.oasis.opendocument.text)
2016-03-11 10:12 UTC, Ben
Details
Simple SVG file (1.78 KB, image/svg+xml)
2023-04-01 14:55 UTC, Tyler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ben 2016-03-11 10:12:07 UTC
Created attachment 123492 [details]
The faulty odt

Hello,

while I was creating a document I had a bizarre issue. when I scrolled through it would duplicate everything I could see so that it didn't show up correctly.

I have created a file with the issue, it has something to do with having a background image and using web layout.

My explanation is quite unclear but I don't know how to make it clearer, just check the attachment and scroll through it with this version.

Build ID: 55b006a02d247b5f7215fc6ea0fde844b30035b3
Comment 1 Alex Thurgood 2016-03-11 11:43:03 UTC
No repro

Version: 5.2.0.0.alpha0+
Build ID: cbbeb771ba3df1d87a69d2115234d88f520ce0e6
CPU Threads: 2; OS Version: Mac OS X 10.11.3; UI Render: default; 
Locale: fr-FR (fr.UTF-8)
Comment 2 MM 2016-03-12 14:35:14 UTC
Confirmed with v5.1.1.3 under windows 10 x64.
Confirmed with v4.4.7.2 under mint 17.3 x64.
Unconfirmed with v4.3.7.2 under mint 17.3 x64.

Maybe already fixed with alpha builds ?
Comment 3 raal 2016-03-16 09:58:27 UTC
I can reproduce this on 5.2Master, win7 -  build is 6 days old
Bibisected  - oldest build in repo doesn't show background image [another bug], I marked it as "good". Latest build in repo show the image and when scrolling the bug occurs. During the bibisect doesn't exist step where background is shown and scrolling is without bug.

 cd178633a216a0b50c9c188a825f740cf3c09ee2 is the first bad commit
commit cd178633a216a0b50c9c188a825f740cf3c09ee2
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sun May 31 16:24:16 2015 -0500

    source 65a56636a68451d15499a37c2d5bd9efb71b1279

    source 65a56636a68451d15499a37c2d5bd9efb71b1279

author	Michael Stahl <mstahl@redhat.com>	2015-04-14 08:37:01 (GMT)
committer	Michael Stahl <mstahl@redhat.com>	2015-04-14 15:29:36 (GMT)
commit 65a56636a68451d15499a37c2d5bd9efb71b1279 (patch)
tree df5dffc97a9ff34535eb2d0fefd6b02c3d2ea5d4
parent c31d87b525dd974e018892c98aed4fdb893c3469 (diff)
tdf#88337 tdf#89193: sw: add missing SwXPageStyle properties

Michael, please could you take a look? Not sure if it's related. Thanks
Comment 4 Michael Stahl 2016-04-13 19:55:13 UTC
the commit in comment #3 fixes the bug that background images on headers, footers and pages were lost, so it's entirely unsurprising and unlikely to be the root cause of a scrolling problem.
Comment 5 Xisco Faulí 2016-09-12 12:50:54 UTC
Adding keyword 'bibisectRequest'.
Comment 6 QA Administrators 2017-10-23 14:15:19 UTC Comment hidden (noise)
Comment 7 Buovjaga 2018-05-25 17:48:29 UTC
The duplication is only temporary and will go away after waiting for a bit. I don't think this can be bibisected as the versions that do not show the background correctly (repeated) do show a little bit of chopping when scrolling, but it does not stay. So the root cause is indeed out of reach for bibisecting.

Tested on Win with 3.5.0, 4.3.0, 4.4.7.2, 5.3.0, bibisect repo 44.
Comment 8 QA Administrators 2019-05-26 02:52:04 UTC Comment hidden (noise)
Comment 9 QA Administrators 2021-05-26 04:53:19 UTC Comment hidden (noise)
Comment 10 Tyler 2023-04-01 14:55:34 UTC
Created attachment 186394 [details]
Simple SVG file
Comment 11 Tyler 2023-04-01 15:03:18 UTC
Still present in 7.4.6.2.

Simply not displaying the background image in web view would
at least render the web view usable again.
Comment 12 QA Administrators 2025-04-01 03:21:15 UTC Comment hidden (noise, obsolete)
Comment 13 Commit Notification 2026-05-21 23:59:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/df0f3bebee23307f4ff811bb60818c6428382019

tdf#98598 tdf#172186 sw: fix Web View with transparent page

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 László Németh 2026-05-22 00:07:14 UTC
In the case of transparent page background, now Web View (and Draft View) paint the margin area, solving this issue (transparent background image) and Bug 172186 (transparent background color).

@Ben and all: Thanks for the report and feedback!