tdf#98598 tdf#172186 sw: fix Web View with transparent page

Page background with transparent image or transparent color
resulted broken scrolling in Web View, painting page content
without clearing the screen. Force painting of page margin
to clear the screen, as in the Normal View.

Regression since commit 65a56636a68451d15499a37c2d5bd9efb71b1279
"tdf#88337 tdf#89193: sw: add missing SwXPageStyle properties".

Change-Id: I22a218ad1741bc46a3a0fa39ace41c45fc1c4842
Signed-off-by: László Németh <nemeth@numbertext.org>
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/3149
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>